all html updated as lecture

--- a/find.html
+++ b/find.html
@@ -8,6 +8,7 @@
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
 
     <title>Find :: kakaoclone </title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -21,11 +22,12 @@
             <i class="fas fa-clock"></i>
             <i class="fas fa-volume-mute"></i>
             <i class="fas fa-wifi"></i>
-            <i class="fas fa-battery-full"></i>
+
             <span class="status-bar__battery-level">100%</span>
+            <i class="fas fa-battery-full"></i>
         </div>
     </div>
-    <header calss="header">
+    <header class="header">
         <div class="header__header-column">
             <h1 class="header_title">Find</h1>
         </div>
@@ -74,14 +76,14 @@
             </h5>
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
-                    <div>
-                        <img src="images\boram.jpg" alt="" class="g-avatar friend__avatar">
-                        <div class="friend__content">
-                            <span class="friend_name">
-                                WON HEE LEE
-                            </span>
-                        </div>
+
+                    <img src="images\boram.jpg" alt="" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            WON HEE LEE
+                        </span>
                     </div>
+
                 </div>
                 <div class="friend__column">
                     <div class="friend__add-btn">
