--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
         integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="css/style.css" />
     <title>Settings :: kakaoclone </title>
 </head>
 
@@ -29,7 +29,7 @@
         <div class="header__header-column">
             <div class="header__back-btn">
                 <a href="more.html" class="header_back-btn">
-                    <i class="fas fa-arrow-left fa-2x"></i>
+                    <i class="fas fa-arrow-left"></i>
                 </a>
             </div>
             <h1 class="header_title">Settings</h1>
