all lecture is added

--- a/friends.html
+++ b/friends.html
@@ -118,6 +118,11 @@
                 </a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">
+            Please make your screen smaller!!
+        </span>
+    </div>
 </body>
 
 </html>
