--- a/index.html
+++ b/index.html
@@ -92,6 +92,14 @@
                 </a></li>
         </ul>
     </nav>
+
+    <div class="bigScreen">
+        <span class="bigScreen__text">
+            Please make your screen smaller!!
+        </span>
+    </div>
+
+
 </body>
 
 </html>
