--- a/settings.html
+++ b/settings.html
@@ -1,71 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
-      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Settings :: kakaoclone</title>
-  </head>
 
-  <body>
-    <div class="status-bar">
-      <div class="status-bar__column">
-        <span class="status-bar__clock">
-          13:54
-        </span>
-      </div>
-      <div class="status-bar__column">
-        <i class="fas fa-clock"></i>
-        <i class="fas fa-volume-mute"></i>
-        <i class="fas fa-wifi"></i>
-        <i class="fas fa-battery-full"></i>
-        <span class="status-bar__battery-level">100%</span>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Settings :: kakaoclone</title>
+</head>
+
+<body>
+  <div class="status-bar">
+    <div class="status-bar__column">
+      <span class="status-bar__clock">
+        13:54
+      </span>
     </div>
-    <header class="header">
-      <div class="header__header-column">
-        <div class="header__back-btn">
-          <a href="more.html" class="header_back-btn">
-            <i class="fas fa-arrow-left"></i>
-          </a>
-        </div>
-        <h1 class="header__title">Settings</h1>
+    <div class="status-bar__column">
+      <i class="fas fa-clock"></i>
+      <i class="fas fa-volume-mute"></i>
+      <i class="fas fa-wifi"></i>
+      <i class="fas fa-battery-full"></i>
+      <span class="status-bar__battery-level">100%</span>
+    </div>
+  </div>
+  <header class="header">
+    <div class="header__header-column">
+      <div class="header__back-btn">
+        <a href="more.html" class="header_back-btn">
+          <i class="fas fa-arrow-left"></i>
+        </a>
       </div>
-      <div class="header__header-column">
-        <span class="header__icon">
-          <i class="fas fa-search"></i>
-        </span>
-      </div>
-    </header>
-    <main class="settings">
-      <section class="settings__sections">
-        <ul class="settings__list">
-          <li class="settings__setting">
-            <span class="settings__icon">
-              <i class="fas fa-lock"></i>
-            </span>
-            <span class="settings__title">Privacy</span>
-          </li>
-          <li class="settings__setting">
-            <span class="settings__icon">
-              <i class="far fa-bell"></i>
-            </span>
-            <span class="settings__title">Notifications</span>
-          </li>
-          <li class="settings__setting">
-            <span class="settings__icon">
-              <i class="far fa-user"></i>
-            </span>
-            <span class="settings__title">Friends</span>
-          </li>
-        </ul>
-      </section>
-    </main>
-  </body>
+      <h1 class="header__title">Settings</h1>
+    </div>
+    <div class="header__header-column">
+      <span class="header__icon">
+        <i class="fas fa-search"></i>
+      </span>
+    </div>
+  </header>
+  <main class="settings">
+    <section class="settings__sections">
+      <ul class="settings__list">
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="fas fa-lock"></i>
+          </span>
+          <span class="settings__title">Privacy</span>
+        </li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="far fa-bell"></i>
+          </span>
+          <span class="settings__title">Notifications</span>
+        </li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="far fa-user"></i>
+          </span>
+          <span class="settings__title">Friends</span>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <div class="bigScreen">
+    <span class="bigScreen__text">
+      Please make your screen smaller!!
+    </span>
+  </div>
+</body>
+
 </html>
