--- a/chat.html
+++ b/chat.html
@@ -10,73 +10,82 @@
     <title>Chat :: kakaoclone </title>
 </head>
 
-<body>
-    <div class="status-bar">
-        <div class="status-bar__column">
-            <span class="status-bar__clock">
-                13:54
-            </span>
-        </div>
-        <div class="status-bar__column">
-            <i class="fas fa-clock"></i>
-            <i class="fas fa-volume-mute"></i>
-            <i class="fas fa-wifi"></i>
-            <i class="fas fa-battery-full"></i>
-            <span class="status-bar__battery-level">100%</span>
-        </div>
-    </div>
-    <header class="header">
-        <div class="header__header-column">
-            <div class="header__back-btn">
-                <a href="index.html" class="header_back-btn">
-                    <i class="fas fa-arrow-left"></i>
-                </a>
+<body class="chat-body">
+    <div class="header-wrapper">
+
+        <div class="status-bar">
+            <div class="status-bar__column">
+                <span class="status-bar__clock">
+                    13:54
+                </span>
             </div>
-            <h1 class="header_title">Boram Kim</h1>
+            <div class="status-bar__column">
+                <i class="fas fa-clock"></i>
+                <i class="fas fa-volume-mute"></i>
+                <i class="fas fa-wifi"></i>
+                <i class="fas fa-battery-full"></i>
+                <span class="status-bar__battery-level">100%</span>
+            </div>
         </div>
-        <div class="header__header-column">
-            <span class="header__icon">
-                <i class="fas fa-search"></i>
-            </span>
-            <span class="header__icon">
-                <i class="fas fa-bars"></i>
-            </span>
-        </div>
-    </header>
-    <main class="chat">
+        <header class="header">
+            <div class="header__header-column">
+                <div class="header__back-btn">
+                    <a href="index.html" class="header_back-btn">
+                        <i class="fas fa-arrow-left"></i>
+                    </a>
+                </div>
+                <h1 class="header_title">Boram Kim</h1>
+            </div>
+            <div class="header__header-column">
+                <span class="header__icon">
+                    <i class="fas fa-search"></i>
+                </span>
+                <span class="header__icon">
+                    <i class="fas fa-bars"></i>
+                </span>
+            </div>
+        </header>
+    </div>
+
+
+
+
+
+    <main class="chat-screen">
         <ul class="chat__messages">
             <span class="chat__timestamp">Sunday, May 10</span>
             <li class="incomming-message message">
                 <img src="images\boram.jpg" class="g-avatar message_avatar">
                 <div class="message__content">
-                    <span class="message__author">Boram Kim</span>
-                    <div class="message__bubble">
+
+                    <span class="message__bubble">
                         Hahahahahahahahaha
-                    </div>
+                    </span>
+                    <span class="message__author">Boram Kim</span>
                     <span class="message__timestamp">13:00</span>
                 </div>
             </li>
-            <li class="incomming-message message">
+            <li class="sent-message message">
                 <span class="message__timestamp">13:00</span>
 
                 <div class="message__content">
                     <span class="message__author">Boram Kim</span>
-                    <div class="message__bubble">
+                    <span class="message__bubble">
                         Hahahahahahahahaha love you
-                    </div>
+                    </span>
                 </div>
             </li>
         </ul>
     </main>
-    <div class="chat__write">
-        <div class="chat__write-column">
+    <div class="chat__write--container">
+        <input class="chat__write" type="text" placeholder="Send message" class="chat__write-input">
+        </input>
+
+        <div class="chat__icon-left chat__icon">
             <i class="far fa-plus-square"></i>
         </div>
-        <div class="chat__write-column">
-            <input type="text" placeholder="Send message" class="chat__write-input">
-            </input>
-        </div>
-        <div class="chat__write-column">
+
+        <div class="chat__icon-right chat__icon">
             <span class="chat__wirte-icon">
                 <i class="far fa-smile-wink"></i>
             </span>
@@ -84,6 +93,11 @@
                 <i class="fas fa-microphone"></i>
             </span>
         </div>
+    </div>
+    <div class="bigScreen">
+        <span class="bigScreen__text">
+            Please make your screen smaller!!
+        </span>
     </div>
 </body>
 
