--- a/find.html
+++ b/find.html
@@ -77,17 +77,51 @@
             <li class="find__friend friend friend--lg">
                 <div class="friend__column">
 
-                    <img src="images\boram.jpg" alt="" class="friend__avatar">
+                    <img src="images\Friend__list__5.PNG" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            WON HEE LEE
+                            John cena
                         </span>
                     </div>
 
                 </div>
                 <div class="friend__column">
                     <div class="friend__add-btn">
-                        <i class="fas fa-user-plus fa-2x"></i>
+                        <i class="fas fa-user-plus fa-1x"></i>
+                    </div>
+                </div>
+            </li>
+            <li class="find__friend friend friend--lg">
+                <div class="friend__column">
+
+                    <img src="images\Friend__list__6.PNG" alt="" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Joco willink
+                        </span>
+                    </div>
+
+                </div>
+                <div class="friend__column">
+                    <div class="friend__add-btn">
+                        <i class="fas fa-user-plus fa-1x"></i>
+                    </div>
+                </div>
+            </li>
+            <li class="find__friend friend friend--lg">
+                <div class="friend__column">
+
+                    <img src="images\Friend__list__7.PNG" alt="" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            N.W.A
+                        </span>
+                    </div>
+
+                </div>
+                <div class="friend__column">
+                    <div class="friend__add-btn">
+                        <i class="fas fa-user-plus fa-1x"></i>
                     </div>
                 </div>
             </li>
@@ -100,6 +134,7 @@
                 </a>
             </li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="far fa-comment"></i>
                 </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
@@ -110,6 +145,11 @@
                 </a></li>
         </ul>
     </nav>
+    <div class="bigScreen">
+        <span class="bigScreen__text">
+            Please make your screen smaller!!
+        </span>
+    </div>
 </body>
 
 </html>
