--- a/friends.html
+++ b/friends.html
@@ -42,9 +42,9 @@
     <main class="friends">
         <div class="friend__column">
             <header class="friends_header">
-                <div class="friends__friend friend friend--lg">
+                <div class="friends__friend friend friend--mg">
                     <div class="friend__column">
-                        <img src="images\boram.jpg" alt="" class="g-avatar friend__avatar">
+                        <img src="images\profile__img.jpg" alt="" class="g-avatar friend__avatar">
                         <div class="friend__content">
                             <span class="friend__name">
                                 WON HEE LEE
@@ -62,7 +62,7 @@
                 <h5 class="friends__title">Plus friend</h5>
                 <div class="friends__friend friend friend">
                     <div class="friend__column">
-                        <img src="images\boram.jpg" alt="" class="friend__avatar">
+                        <img src="https://img.icons8.com/bubbles/50/000000/crowd.png" class="friend__avatar" />
                         <div class="friend__content">
                             <span class="friend__name">
                                 PLUS FRIEND
@@ -74,25 +74,66 @@
         </div>
         <ul class="friends__list">
             <h5 class="friends__title">Friends 224</h5>
+
             <li class="friends__friend friend friend--lg">
                 <div class="friend__column">
-
-                    <img src="images\boram.jpg" alt="" class="friend__avatar">
+                    <img src="images\Friend__list__1.PNG" alt="" class="friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
-                            WON HEE LEE
+                            Dwayne Johnson
                         </span>
                         <span class="friend__status">
-                            skyinyour@naver.com
+                            Go harder! Go get better!
                         </span>
                     </div>
-
-
-
                 </div>
                 <div class="friend__column">
                     <div class="friend__now-listening">
-                        <span> SEX ON THE BEACH(FS)
+                        <span> See you again - Wiz Khalifa
+                            <i class="fas fa-play"></i>
+                        </span>
+
+                    </div>
+                </div>
+            </li>
+
+            <li class="friends__friend friend friend--lg">
+                <div class="friend__column">
+                    <img src="images\Friend__list__4.PNG" alt="" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            2-Pac
+                        </span>
+                        <span class="friend__status">
+                            California Love Babe!
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <div class="friend__now-listening">
+                        <span> California Love - 2Pac
+                            <i class="fas fa-play"></i>
+                        </span>
+
+                    </div>
+                </div>
+            </li>
+
+            <li class="friends__friend friend friend--lg">
+                <div class="friend__column">
+                    <img src="images\Friend__list__3.PNG" alt="" class="friend__avatar">
+                    <div class="friend__content">
+                        <span class="friend__name">
+                            Vin Diesel
+                        </span>
+                        <span class="friend__status">
+                            Ride or Die.
+                        </span>
+                    </div>
+                </div>
+                <div class="friend__column">
+                    <div class="friend__now-listening">
+                        <span> Ride Out
                             <i class="fas fa-play"></i>
                         </span>
 
@@ -108,6 +149,7 @@
                 </a>
             </li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="far fa-comment"></i>
                 </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
