--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
     <header class="header">
         <div class="header__header-column">
             <h1 class="header_title">Chats</h1>
+
         </div>
         <div class="header__header-column">
+            <!-- <div class="pop-up">
+                짜잔;
+            </div> -->
             <span class="header__icon">
                 <i class="fas fa-search"> </i>
             </span>
@@ -42,6 +46,7 @@
                 <a href="settings.html" class="nav__list-link"> <i class="fas fa-cog"></i></a>
 
             </span>
+
         </div>
     </header>
     <main class="chats">
@@ -56,21 +61,69 @@
                                 Borami
                             </span>
                             <span class="friend__bottom-text">
-                                go home ee
+                                이제 다와가~! 한 정류장 남음!!
                             </span>
                         </div>
 
                     </div>
                     <div class="friend__column">
-                        <div class="friend__now-listening">
-                            <span class="chat__timestamp">
-                                May 24
-                            </span>
 
-                        </div>
+                        <span class="chat__timestamp">
+                            May 24
+                        </span>
+
                     </div>
                 </li>
+            </a>
+            <a href="chat__friend__2.html">
+                <li class="chats__chat friend friend--lg">
+                    <div class="friend__column">
 
+                        <img src="images\Friend__list__3.PNG" alt="" class="m-avatar friend__avatar">
+                        <div class="friend__content">
+                            <span class="friend__name">
+                                Vin Diesel
+                            </span>
+                            <span class="friend__bottom-text">
+                                What's up buddy!
+                            </span>
+                        </div>
+
+                    </div>
+                    <div class="friend__column">
+
+                        <span class="chat__timestamp">
+                            May 27
+                        </span>
+
+
+                    </div>
+                </li>
+            </a>
+            <a href="chat__friend__3.html">
+                <li class="chats__chat friend friend--lg">
+                    <div class="friend__column">
+
+                        <img src="images\Friend__list__4.PNG" alt="" class="m-avatar friend__avatar">
+                        <div class="friend__content">
+                            <span class="friend__name">
+                                2-Pac
+                            </span>
+                            <span class="friend__bottom-text">
+                                Life goes on and on :)
+                            </span>
+                        </div>
+
+                    </div>
+                    <div class="friend__column">
+
+                        <span class="chat__timestamp">
+                            March 3
+                        </span>
+
+
+                    </div>
+                </li>
             </a>
         </ul>
     </main>
