--- a/more.html
+++ b/more.html
@@ -45,9 +45,8 @@
     </header>
     <main class="more">
         <header class="more__header">
-            <div class="friends__friend friend friend--lg">
+            <div class="friends__friend friend friend--lg" id="s">
                 <div class="friend__column">
-
                     <img src="images\boram.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
@@ -121,6 +120,14 @@
                             Friends Game
                         </span>
                     </li>
+                    <li class="more__suggestion suggestion">
+                        <span class="suggestion__icon">
+                            <i class="fas fa-gift"></i>
+                        </span>
+                        <span class="suggestion__title">
+                            Gift Shop
+                        </span>
+                    </li>
                 </ul>
             </section>
         </header>
@@ -132,6 +139,7 @@
                 </a>
             </li>
             <li class="nav__list-item"><a href="index.html" class="nav__list-link">
+                    <div class="nav__badge">8</div>
                     <i class="far fa-comment"></i>
                 </a></li>
             <li class="nav__list-item"><a href="find.html" class="nav__list-link">
