--- a/settings.html
+++ b/settings.html
@@ -32,7 +32,7 @@
           <i class="fas fa-arrow-left"></i>
         </a>
       </div>
-      <h1 class="header__title">Settings</h1>
+      <h1 class="header_title">Settings</h1>
     </div>
     <div class="header__header-column">
       <span class="header__icon">
@@ -60,6 +60,18 @@
             <i class="far fa-user"></i>
           </span>
           <span class="settings__title">Friends</span>
+        </li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="fas fa-tools"></i>
+          </span>
+          <span class="settings__title">Setting Menu</span>
+        </li>
+        <li class="settings__setting">
+          <span class="settings__icon">
+            <i class="fas fa-adjust"></i>
+          </span>
+          <span class="settings__title">Display</span>
         </li>
       </ul>
     </section>
