--- a/chat__friend__3.html
+++ b/chat__friend__3.html
@@ -23,8 +23,8 @@
                 <i class="fas fa-clock"></i>
                 <i class="fas fa-volume-mute"></i>
                 <i class="fas fa-wifi"></i>
-                <span class="status-bar__battery-level">100%</span>
                 <i class="fas fa-battery-full"></i>
+                <span class="status-bar__battery-level">100%</span>
             </div>
         </div>
         <header class="header">
@@ -34,7 +34,7 @@
                         <i class="fas fa-arrow-left"></i>
                     </a>
                 </div>
-                <h1 class="header_title">Boram Kim</h1>
+                <h1 class="header_title">2Pac</h1>
             </div>
             <div class="header__header-column">
                 <span class="header__icon">
@@ -49,24 +49,26 @@
 
 
 
+
+
     <main class="chat-screen">
         <ul class="chat__messages">
-            <span class="chat__timestamp">Sunday, May 10</span>
+            <span class="chat__timestamp">Friday, March 3</span>
             <li class="incomming-message message">
-                <img src="images\boram.jpg" class="g-avatar message_avatar">
+                <img src="images\Friend__list__4.PNG" alt="" class="g-avatar message_avatar">
                 <div class="message__content">
 
                     <span class="message__bubble">
-                        어디야? 어디쯤이야?! 왜 안와!?
+                        I'm so tired these days, my friend.
                     </span>
-                    <!-- <span class="message__author">Boram Kim</span> -->
-                    <span class="message__timestamp">13:39</span>
+                    <!-- <span class="message__author">2Pac</span> -->
+                    <span class="message__timestamp">07:33</span>
                 </div>
             </li>
             <li class="sent-message message">
                 <div class="message__content">
                     <span class="message__bubble">
-                        이제 다와가~! 한 정류장 남음!!
+                        Life goes on and on :)
                     </span>
                 </div>
             </li>
