--- a/chat.html
+++ b/chat.html
@@ -57,7 +57,7 @@
                 <div class="message__content">
 
                     <span class="message__bubble">
-                        어디야? 어디쯤이야?! 왜 안와!?
+                        레르 레르 레르꼬우! 천천히 빨리와^^
                     </span>
                     <!-- <span class="message__author">Boram Kim</span> -->
                     <span class="message__timestamp">13:39</span>
