profile image change at more.html

--- a/more.html
+++ b/more.html
@@ -47,7 +47,8 @@
         <header class="more__header">
             <div class="friends__friend friend friend--lg" id="s">
                 <div class="friend__column">
-                    <img src="images\boram.jpg" alt="" class="g-avatar friend__avatar">
+
+                    <img src="images\profile__img.jpg" alt="" class="g-avatar friend__avatar">
                     <div class="friend__content">
                         <span class="friend__name">
                             WON HEE LEE
